[package]
name = "edgelinkd"
version = "0.1.0"
edition = "2021"
rust_version = "1.77.2"
readme = "README.md"
homepage = "https://github.com/oldrev/edgelink.rs"
description = "EdgeLink is a Node-RED compatible run-time engine in Rust."
build = "build.rs"
license = "Apache 2.0"
authors = ["Li Wei <oldrev@gmail.com>"]

[[bin]]
name = "edgelinkd"
path = "src/main.rs"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[profile.ci]
inherits = "dev"
debug = false
incremental = false


[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.

[profile.test]
opt-level = 1 # Enables thin local LTO and some optimizations.

[workspace.dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
log = "0.4.20"
tokio = "1.40.0"
tokio-util = "0.7.11"
semver = "1.0.23"
config = { version = "0.14.0", default-features = false, features = [
    "convert-case",
    "toml",
] }

[dependencies]
dirs-next = "2.0.0"
clap = { version = "4.5.16", features = ["derive"] }
anyhow.workspace = true
log.workspace = true
libloading = "0.8.5"
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
config.workspace = true
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "file_appender",
    "rolling_file_appender",
    "compound_policy",
    "delete_roller",
    "fixed_window_roller",
    "size_trigger",
    "time_trigger",
    #    "json_encoder",
    "pattern_encoder",
    "threshold_filter",
    "config_parsing",
    "toml_format",
], default-features = false }
semver.workspace = true
edgelink_core = { path = "./crates/core" }
edgelink_red_sqlite_node = { path = "plugins/edgelink_red_sqlite_node" }


[dev-dependencies]
serde_json_path = "0.6.3"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[workspace]
members = ["./crates/*", "./plugins/*"]

[package.metadata.bundle]
identifier = "com.github.oldrev.edgelink"

[features]
default = []
rqjs_bindgen = ["edgelink_core/rqjs_bindgen"]