[package]
name = "edgelink-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [
    "Li Wei <oldrev@gmail.com>"
]



[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "net",
    "sync",
    "io-util",
    "io-std",
] }
config.workspace = true
async-trait = "0.1.81"
log.workspace = true
inventory = "0.3.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio-util.workspace = true
nom = "7.1.3"
regex = "1.10.2"
bumpalo = "3.16.0"
tokio-cron-scheduler = "0.11.0"
topological-sort = "0.2.2"
chrono = "0.4.38"
rquickjs = { version = "0.6.2", features = ["full-async", "parallel", "macro"] }
rand = "0.8.5"
semver.workspace = true
base64 = "0.22.1"
smallvec = "1.13.2"
bytes = { version = "1.7.1", features = ["std", "serde"] }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }


[features]
default = ["nodes_mqtt", "nodes_udp"]
nodes_mqtt = []
nodes_http = ["tokio/net"]
nodes_tcp = ["tokio/net"]
nodes_udp = ["tokio/net"]
nodes_websocket = []
