[package]
name = "edgelink-pymod"
version = "0.1.0"
edition = "2021"

[lib]
name = "edgelink_pymod"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = "1"
serde.workspace = true
serde_json.workspace = true
config.workspace = true

edgelink-core = { path = "../../crates/core", default-features = true, features = [
    "pymod",
] }
# Node plug-ins:
edgelink-dummy-node = { path = "../../node-plugins/edgelink-dummy-node" }
